--- a/HTML Calculator/style.css
+++ b/HTML Calculator/style.css
@@ -1,16 +1,18 @@
 *{
     margin: 0;
-    padding: 0;  
+    padding: 0; 
 }
 
 body{
     display: flex;
     justify-content: center;
+    background-color: black;
 }
 
 #shape{
     width: 400px;
     height: 600px;
+    margin-top: 100px;
     background-color: blue;
     display: flex;
     flex-wrap: wrap;
@@ -54,11 +56,44 @@ color: yellow;
 font-weight: bold;
 }
 
+#numPad{
+    width: 100%;
+    height: auto;
+    
+}
+
 .numPadRow{
-    width: 24%;
+    width: 100%;
     height: auto;
     display: flex;
 flex-direction: row;
 justify-content: space-between;
 }
 
+.numPadButton{
+    width: 24%;
+    height: 60px;
+}
+
+#numPadLower{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: aliceblue;
+}
+
+#numPadLowerLeft{
+    width: 78%;
+}
+
+#button0{
+    width: 48%;
+    height: 60px;
+}
+
+#buttonEnter{
+   width: 24%; 
+   height: 120px;
+}
